Fix overflow

--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
   font-size: 1.5rem;
   margin: 0;
   position: 0;
+  overflow: hidden;
 }
 
 table {
@@ -59,7 +60,6 @@ td[data-index]:hover {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.6);
   transition-duration: 200ms;
